# tetris

./: CMakeLists.txt  README.md  main.c  main.h
game/: game.c  game.h
structures/: structures.h
